Fixed sign-up/ sign-in missing on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,8 @@ button {
 .category,
 .explore {
   margin: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 5rem;
 }
 @media (min-width: 1024px) {
   .pageContainer,
